Finish up informations

--- a/cv.tex
+++ b/cv.tex
@@ -64,21 +64,21 @@
 \section{\en{Personal}\de{Persönliche Daten}}
 \cvline{\en{born}\de{geboren}}{16.07.2006, Stuttgart}
 
-\section{Ausbildung}
-\cventry{2016-2024}{Gymnasium}{Königin-Olga-Stift}{Stuttgart}{Teilnahme an der Homepage AG}{Leistungskurse: Mathe, Physik, Musik}
+\section{\en{Education}\de{Ausbildung}}
+\cventry{2016-2024}{Gymnasium}{Königin-Olga-Stift}{Stuttgart}{}{\en{Majors: Mathematics, Physics, Music}\de{Leistungskurse: Mathematik, Physik, Musik}}
 
-\section{Berufserfahrung}
-\cventry{April 2022}{BOGY Parktikum bei Quanos}{Script fuer den Build Prozess geschrieben und Feature Implementation}{}{}{}
-\cventry{2020}{Freiberuflicherfahrung mit Websiten}{}{}{}{}
-\cvitem{2019}{Discord Bot Programmierung auf Fiverr}{In dieser Zeit hatte ich mich erstmals mit Freiberuflichen Aktivitaeten beschäftigt.}{}{}{}
+\section{\en{Work Experience}\de{Berufserfahrung}}
+\cventry{April 2022}{\en{BOGY Internship at Quanos}\de{BOGY Praktikum bei Quanos}}{\en{Full-Stack feature implementation and dev-ops Experience}\de{Full-Stack Feature Implementation und dev-ops Erfahrung}}{}{}{}
+\cventry{2020}{\en{Freelancing activities with Websites}\de{Freiberuflicherfahrung mit Websiten}}{}{}{}{}
+\cventry{2019}{\en{Discord Bot Programming on Fiverr}\de{Discord Bot Programmierung auf Fiverr}}{\en{}\de{In dieser Zeit hatte ich mich erstmals mit Freiberuflichen Aktivitaeten beschäftigt.}}{}{}{}
 
 
-\section{Programmierkenntnisse}
-\cvcomputer{Sprachen}{JavaScript, Go, Python, Java, Bash, SQL, LaTeX}{Technologien}{Linux, React, React Native, Express.js, Flask, Docker, Git, CI/CD}
+\section{\en{Programming Skills}\de{Programmierkenntnisse}}
+\cvcomputer{\en{Languages}\de{Sprachen}}{JavaScript, Go, Python, Java, Bash, SQL, LaTeX}{\en{Technologies}\de{Technologien}}{Linux, React, React Native, Express.js, Flask, Docker, Git, CI/CD}
 
-\section{Open Source Projekte}
+\section{\en{Open Source Projects}\de{Open Source Projekte}}
 \cvlistitem{\link{https://github.com/SheetAble/SheetAble}{\textbf{SheetAble}}: 
-            {SheetAble ist eine Musiknoten-organisierer Software. Es beinhaltet eine tablet App fuer iPadOS sowie Android und eine Webapp + Server mit React und Golang.}}
+            {\en{SheetAble is a music sheets organizer software. It includes a tablet app for iPadOS/Android and a webapp + server written with React and Golang.}\de{SheetAble ist eine Musiknoten-organisierer Software. Es beinhaltet eine tablet App fuer iPadOS sowie Android und eine Webapp + Server geschrieben mit React und Golang.}}}
 \cvlistitem{\link{https://github.com/vallezw/Image-Uploader}{\textbf{Image Uploader}}: 
             \en{An open source self hosted dockerized image uploader, React + Express.}
             \de{Ein open source selbst gehosteter Bilduploadservice mit Docker Unterstützung, React + Express.}}
@@ -96,7 +96,8 @@
 
 \section{\en{Hobbys}\de{Hobbys, Interessen}}
 \cvlistdoubleitem{\en{Piano}\de{Klavier}}{}
-\cvlistdoubleitem{\en{Video games}\de{Videospiele}}{}
+\cvlistdoubleitem{\en{Music Theory/Composing}\de{Musik Theorie/Komponieren}}{}
+\cvlistdoubleitem{\en{Grand Strategy Games}\de{Grand-Strategy-Spiele}}{}
 
 \emptysection{}\closesection
 \vfill
