--- a/cv.tex
+++ b/cv.tex
@@ -68,9 +68,9 @@
 \cventry{2016-2024}{Gymnasium}{Königin-Olga-Stift}{Stuttgart}{}{\en{Majors: Mathematics, Physics, Music}\de{Leistungskurse: Mathematik, Physik, Musik}}
 
 \section{\en{Work Experience}\de{Berufserfahrung}}
-\cventry{April 2022}{\en{BOGY Internship at Quanos}\de{BOGY Praktikum bei Quanos}}{\en{Full-Stack feature implementation and dev-ops Experience}\de{Full-Stack Feature Implementation und dev-ops Erfahrung}}{}{}{}
-\cventry{2020}{\en{Freelancing activities with Websites}\de{Freiberuflicherfahrung mit Websiten}}{}{}{}{}
-\cventry{2019}{\en{Discord Bot Programming on Fiverr}\de{Discord Bot Programmierung auf Fiverr}}{\en{}\de{In dieser Zeit hatte ich mich erstmals mit Freiberuflichen Aktivitaeten beschäftigt.}}{}{}{}
+\cventry{April 2022}{\en{BOGY Internship at Quanos}\de{BOGY Praktikum bei Quanos}}{\en{Full-Stack feature implementation and DevOps experience}\de{Full-Stack Feature Implementation und DevOps Erfahrung}}{}{}{}
+\cventry{2020}{\en{Freelancing activities with websites}\de{Freiberuflicherfahrung mit Websiten}}{}{}{}{}
+\cventry{2019}{\en{Discord bot programming on Fiverr}\de{Discord Bot Programmierung auf Fiverr}}{\en{}\de{In dieser Zeit hatte ich mich erstmals mit Freiberuflichen Aktivitäten beschäftigt.}}{}{}{}
 
 
 \section{\en{Programming Skills}\de{Programmierkenntnisse}}
@@ -78,7 +78,7 @@
 
 \section{\en{Open Source Projects}\de{Open Source Projekte}}
 \cvlistitem{\link{https://github.com/SheetAble/SheetAble}{\textbf{SheetAble}}: 
-            {\en{SheetAble is a music sheets organizer software. It includes a tablet app for iPadOS/Android and a webapp + server written with React and Golang.}\de{SheetAble ist eine Musiknoten-organisierer Software. Es beinhaltet eine tablet App fuer iPadOS sowie Android und eine Webapp + Server geschrieben mit React und Golang.}}}
+            {\en{SheetAble is a music sheets organizer software. It includes a tablet app for iPadOS/Android and a webapp + server written with React and Golang.}\de{SheetAble ist eine Musiknotenorganisationssoftware. Es beinhaltet eine Tablet App für iPadOS sowie Android und eine Webapp + Server geschrieben mit React und Golang.}}}
 \cvlistitem{\link{https://github.com/vallezw/Image-Uploader}{\textbf{Image Uploader}}: 
             \en{An open source self hosted dockerized image uploader, React + Express.}
             \de{Ein open source selbst gehosteter Bilduploadservice mit Docker Unterstützung, React + Express.}}
@@ -96,7 +96,7 @@
 
 \section{\en{Hobbys}\de{Hobbys, Interessen}}
 \cvlistdoubleitem{\en{Piano}\de{Klavier}}{}
-\cvlistdoubleitem{\en{Music Theory/Composing}\de{Musik Theorie/Komponieren}}{}
+\cvlistdoubleitem{\en{Music theory/Composing}\de{Musiktheorie/Komponieren}}{}
 \cvlistdoubleitem{\en{Grand Strategy Games}\de{Grand-Strategy-Spiele}}{}
 
 \emptysection{}\closesection
