--- a/cv.tex
+++ b/cv.tex
@@ -67,11 +67,16 @@
 \section{\en{Education}\de{Ausbildung}}
 \cventry{2016-2024}{Gymnasium}{Königin-Olga-Stift}{Stuttgart}{}{\en{Majors: Mathematics, Physics, Music}\de{Leistungskurse: Mathematik, Physik, Musik}}
 
+\section{\en{Competitions}\de{Wettbewerbe}}
+\cventry{2022}{Bundeswettbewerb Mathematik}{\en{1st Round: 3rd Price}\de{1. Runde: Dritter Preis}}{}{}{}
+\cventry{2020}{Jugendwettbewerb Informatik}{\en{1st, 2nd, 3rd Round: 1st Price}\de{1., 2., 3. Runde: Erster Preis}}{}{}{}
+\cventry{2019}{Informatik Biber}{\en{1st Price}\de{Erster Preis}}{}{}{}
+
+
 \section{\en{Work Experience}\de{Berufserfahrung}}
-\cventry{April 2022}{\en{BOGY Internship at Quanos}\de{BOGY Praktikum bei Quanos}}{\en{Full-Stack feature implementation and DevOps experience}\de{Full-Stack Feature Implementation und DevOps Erfahrung}}{}{}{}
+\cventry{April 2022}{\en{BOGy Internship at \link{https://www.linkedin.com/company/quanoscontentsolutions-gmbh/}{Quanos}}\de{BOGy Praktikum bei \link{https://www.linkedin.com/company/quanoscontentsolutions-gmbh/}{Quanos}}}{\en{Full-Stack feature implementation and DevOps experience}\de{Full-Stack Feature Implementation und DevOps Erfahrung}}{}{}{}
 \cventry{2020}{\en{Freelancing activities with websites}\de{Freiberuflicherfahrung mit Websiten}}{}{}{}{}
 \cventry{2019}{\en{Discord bot programming on Fiverr}\de{Discord Bot Programmierung auf Fiverr}}{\en{}\de{In dieser Zeit hatte ich mich erstmals mit Freiberuflichen Aktivitäten beschäftigt.}}{}{}{}
-
 
 \section{\en{Programming Skills}\de{Programmierkenntnisse}}
 \cvcomputer{\en{Languages}\de{Sprachen}}{JavaScript, Go, Python, Java, Bash, SQL, LaTeX}{\en{Technologies}\de{Technologien}}{Linux, React, React Native, Express.js, Flask, Docker, Git, CI/CD}
