--- a/cv.tex
+++ b/cv.tex
@@ -50,7 +50,7 @@
 \name{Valentin}{Zwerschke}
 \title{\en{CV}\de{Lebenslauf}}
 % \address{...}{}
-\email{v.zwerschke@mail.de}
+\email{vallezw@gmail.com}
 \social[github][github.com/vallezw]{vallezw}
 % \social[linkedin][...]{Valentin Zwerschke}
 % \photo[2.5cm]{images/photo}
