--- a/cv.tex
+++ b/cv.tex
@@ -52,7 +52,7 @@
 % \address{...}{}
 \email{vallezw@gmail.com}
 \social[github][github.com/vallezw]{vallezw}
-% \social[linkedin][...]{Valentin Zwerschke}
+\social[linkedin][linkedin.com/in/vallezw/]{Valentin Zwerschke}
 % \photo[2.5cm]{images/photo}
  
 \begin{document}
@@ -64,28 +64,27 @@
 \cvline{\en{born}\de{geboren}}{16.07.2006, Stuttgart}
 
 \section{\en{Education}\de{Ausbildung}}
+\cventry{2012-2016}{Grundschule}{Franz-Schubert-Schule}{Stuttgart}{}{}
 \cventry{2016-2024}{Gymnasium}{Königin-Olga-Stift}{Stuttgart}{}{\en{Majors: Mathematics, Physics, Music}\de{Leistungskurse: Mathematik, Physik, Musik}}
 
 \section{\en{Competitions}\de{Wettbewerbe}}
+\cventry{2023, 2024}{International Physik Olympiade}{Erfolgreiche Teilnahme 1. Runde}{}{}{}
 \cventry{2022}{Bundeswettbewerb Mathematik}{\en{1st Round: 3rd Price}\de{1. Runde: Dritter Preis}}{}{}{}
 \cventry{2020}{Jugendwettbewerb Informatik}{\en{1st, 2nd, 3rd Round: 1st Price}\de{1., 2., 3. Runde: Erster Preis}}{}{}{}
 \cventry{2019}{Informatik Biber}{\en{1st Price}\de{Erster Preis}}{}{}{}
 
 
 \section{\en{Work Experience}\de{Berufserfahrung}}
-\cventry{April 2022}{\en{BOGy Internship at \link{https://www.linkedin.com/company/quanoscontentsolutions-gmbh/}{Quanos}}\de{BOGy Praktikum bei \link{https://www.linkedin.com/company/quanoscontentsolutions-gmbh/}{Quanos}}}{\en{Full-Stack feature implementation and DevOps experience}\de{Full-Stack Feature Implementation und DevOps Erfahrung}}{}{}{}
-\cventry{2020}{\en{Freelancing activities with websites}\de{Freiberuflicherfahrung mit Websiten}}{}{}{}{}
-\cventry{2019}{\en{Discord bot programming on Fiverr}\de{Discord Bot Programmierung auf Fiverr}}{\en{}\de{In dieser Zeit hatte ich mich erstmals mit Freiberuflichen Aktivitäten beschäftigt.}}{}{}{}
+\cventry{2023-2024}{Werkschüler, QuantCo}{Full-Stack Development (15 Stunde p.W.)}{}{}{}
+\cventry{April 2022}{\en{BOGy Internship at \link{https://www.linkedin.com/company/quanoscontentsolutions-gmbh/}{Quanos}}\de{BOGy Praktikum bei \link{https://www.linkedin.com/company/quanoscontentsolutions-gmbh/}{Quanos Solutions GmbH}}}{\en{Full-Stack feature implementation and DevOps experience}\de{Full-Stack Feature Implementation und DevOps Erfahrung}}{}{}{}
+
 
 \section{\en{Programming Skills}\de{Programmierkenntnisse}}
-\cvcomputer{\en{Languages}\de{Sprachen}}{JavaScript, Go, Python, Java, Bash, SQL, LaTeX}{\en{Technologies}\de{Technologien}}{Linux, React, React Native, Express.js, Flask, Docker, Git, CI/CD}
+\cvcomputer{\en{Languages}\de{Sprachen}}{TypeScript, JavaScript, Go, Python, Java, SQL, LaTeX}{\en{Technologies}\de{Technologien}}{Linux, React, React Native, Express.js, Flask, Docker, Git, CI/CD}
 
 \section{\en{Open Source Projects}\de{Open Source Projekte}}
 \cvlistitem{\link{https://github.com/SheetAble/SheetAble}{\textbf{SheetAble}}: 
-            {\en{SheetAble is a music sheets organizer software. It includes a tablet app for iPadOS/Android and a webapp + server written with React and Golang.}\de{SheetAble ist eine Musiknotenorganisationssoftware. Es beinhaltet eine Tablet App für iPadOS sowie Android und eine Webapp + Server geschrieben mit React und Golang.}}}
-\cvlistitem{\link{https://github.com/vallezw/Image-Uploader}{\textbf{Image Uploader}}: 
-            \en{An open source self hosted dockerized image uploader, React + Express.}
-            \de{Ein open source selbst gehosteter Bilduploadservice mit Docker Unterstützung, React + Express.}}
+            {\en{SheetAble is a music sheets organizer software. It includes a tablet app for iPadOS/Android and a webapp + server written with React and Golang.}\de{Organisationssoftware für Musiknoten, inklusive Server, WebApp und Tablet App für iPadOS und Android}}}
 \cvlistitem{\link{https://github.com/vallezw/The-Social-Network}{\textbf{The Social Network}}: 
             \en{A Twitter like Social Network made with React and Firebase.}
             \de{Ein Twitter-ähnliches soziales Netzwerk mit React und Firebase gemacht.}}
@@ -99,9 +98,9 @@
            {\en{Russian}\de{Russisch}}{\en{Basic}\de{Grundlegende Kenntnisse}}
 
 \section{\en{Hobbys}\de{Hobbys, Interessen}}
-\cvlistdoubleitem{\en{Piano}\de{Klavier}}{}
-\cvlistdoubleitem{\en{Music theory/Composing}\de{Musiktheorie/Komponieren}}{}
-\cvlistdoubleitem{\en{Grand Strategy Games}\de{Grand-Strategy-Spiele}}{}
+\cvlistdoubleitem{\en{Piano}\de{OSS Programmieren}}{}
+\cvlistdoubleitem{\en{Piano}\de{Klavier, Musiktheorie}}{}
+\cvlistdoubleitem{\en{Grand Strategy Games}\de{Ski, Fitness}}{}
 
 \emptysection{}\closesection
 \vfill
